--- a/daycare/index.html
+++ b/daycare/index.html
@@ -765,7 +765,23 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </div></div></div>
 
 
-<div id="skills" class="bg-secondary py-5 px-5"><div class="container"><h1 class="text-primary fw-bold">What I do</h1><div class="d-flex flex-row flex-wrap justify-content-center"><div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Software Development</h4><div class="text-dark card-description">I specialize in Java and Spring, building scalable, reliable applications and crafting high-performance APIs. My focus is on creating systems optimised for efficiency and maintainability with clean, well-structured code.</div><div class="text-end"><div class="list-links-container"></div></div></div><div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Infrastructure</h4><div class="text-dark card-description">I design and build clean, DRY, secure configurations using Terraform and Terragrunt. From networks to containers, I deliver end-to-end infrastructure solutions that prioritise security and scalability, including orchestration for seamless workflows.</div><div class="text-end"><div class="list-links-container"></div></div></div><div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Development Environments</h4><div class="text-dark card-description">Modern architectures are complex, but developers shouldn’t need to master them to start coding. Simplified workflows allow developers to focus on coding, not infrastructure, and streamlined deployment enables teams to stay productive.</div><div class="text-end"><div class="list-links-container"></div></div></div><div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">AI and Machine Learning</h4><div class="text-dark card-description">Running AI workloads shouldn't lead to bankrupcy! I design cost-efficient AI workloads, leveraging GPUs for high-performance computing without breaking the bank.</div><div class="text-end"><div class="list-links-container"></div></div></div><div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Team Upskilling</h4><div class="text-dark card-description">I create tailored Proof of Concepts and tutorials that align with team skillsets and tech stacks. These resources accelerate technology adoption and streamline workflows, reducing learning curves for development teams.</div><div class="text-end"><div class="list-links-container"></div></div></div></div></div></div>
+<div id="skills" class="bg-secondary py-5 px-5"><div class="container"><h1 class="text-primary fw-bold">What I do</h1>
+
+<div class="d-flex flex-row flex-wrap justify-content-center">
+
+<div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Software Development</h4><div class="text-dark card-description">I specialize in Java and Spring, building scalable, reliable applications and crafting high-performance APIs. My focus is on creating systems optimised for efficiency and maintainability with clean, well-structured code.</div><div class="text-end"><div class="list-links-container"></div></div></div>
+
+<!--
+<div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Infrastructure</h4><div class="text-dark card-description">I design and build clean, DRY, secure configurations using Terraform and Terragrunt. From networks to containers, I deliver end-to-end infrastructure solutions that prioritise security and scalability, including orchestration for seamless workflows.</div><div class="text-end"><div class="list-links-container"></div></div></div>
+
+<div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Development Environments</h4><div class="text-dark card-description">Modern architectures are complex, but developers shouldn’t need to master them to start coding. Simplified workflows allow developers to focus on coding, not infrastructure, and streamlined deployment enables teams to stay productive.</div><div class="text-end"><div class="list-links-container"></div></div></div>
+
+<div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">AI and Machine Learning</h4><div class="text-dark card-description">Running AI workloads shouldn't lead to bankrupcy! I design cost-efficient AI workloads, leveraging GPUs for high-performance computing without breaking the bank.</div><div class="text-end"><div class="list-links-container"></div></div></div>
+
+<div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Team Upskilling</h4><div class="text-dark card-description">I create tailored Proof of Concepts and tutorials that align with team skillsets and tech stacks. These resources accelerate technology adoption and streamline workflows, reducing learning curves for development teams.</div><div class="text-end"><div class="list-links-container"></div></div></div>
+-->
+
+</div></div></div>
 
 
 <!--
