--- a/daycare/index.html
+++ b/daycare/index.html
@@ -765,11 +765,11 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </div></div></div>
 
 
-<div id="skills" class="bg-secondary py-5 px-5"><div class="container"><h1 class="text-primary fw-bold">What I do</h1>
+<div id="skills" class="bg-secondary py-5 px-5"><div class="container"><h1 class="text-primary fw-bold">Testimonials</h1>
 
 <div class="d-flex flex-row flex-wrap justify-content-center">
 
-<div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Software Development</h4><div class="text-dark card-description">I specialize in Java and Spring, building scalable, reliable applications and crafting high-performance APIs. My focus is on creating systems optimised for efficiency and maintainability with clean, well-structured code.</div><div class="text-end"><div class="list-links-container"></div></div></div>
+<div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Satisfied Customer</h4><div class="text-dark card-description"><p>"Thank God Mark was there!"</p></div><div class="text-end"><div class="list-links-container"></div></div></div>
 
 <!--
 <div class="card py-3 px-3 mx-2 my-3 card-work"><h4 class="text-primary">Infrastructure</h4><div class="text-dark card-description">I design and build clean, DRY, secure configurations using Terraform and Terragrunt. From networks to containers, I deliver end-to-end infrastructure solutions that prioritise security and scalability, including orchestration for seamless workflows.</div><div class="text-end"><div class="list-links-container"></div></div></div>
