deploy: mm-camelcase/resume@2727950b1e5f7ff8394b374ae135393048919335

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -312,6 +312,10 @@ other libraries.</li>
 </ul>
 <hr />
 <table>
+<colgroup>
+<col style="width: 55%" />
+<col style="width: 44%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th style="text-align: left;"><strong>Senior Software
@@ -353,6 +357,10 @@ by Struts MVC and Spring services</li>
 </ul>
 <hr />
 <table>
+<colgroup>
+<col style="width: 55%" />
+<col style="width: 44%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th style="text-align: left;"><strong>Software Developer</strong></th>
