--- a/resume/resume.html
+++ b/resume/resume.html
@@ -30,7 +30,9 @@
 <p><strong>Email:</strong> <a
 href="mailto:mark@camelcase.email">mark@camelcase.email</a><br />
 <strong>Portfolio:</strong> <a
-href="https://www.camelcase.club/">www.camelcase.club</a><br />
+href="https://www.camelcase.club/">www.camelcase.club</a>
+<strong>Github:</strong> <a
+href="https://github.com/mm-camelcase">github.com/mm-camelcase</a>
 <strong>Linkedin:</strong> <a
 href="https://www.linkedin.com/in/mark-mitchell-camelcase/">www.linkedin.com/mmc</a></p>
 </div>
