deploy: mm-camelcase/resume@0a7b780f65cec7f1868f5d7bc122dd6cb5b2c6d3

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -30,9 +30,9 @@
 <p><strong>Email:</strong> <a
 href="mailto:mark@camelcase.email">mark@camelcase.email</a><br />
 <strong>Portfolio:</strong> <a
-href="https://www.camelcase.club/">www.camelcase.club</a>
+href="https://www.camelcase.club/">www.camelcase.club</a><br />
 <strong>Github:</strong> <a
-href="https://github.com/mm-camelcase">github.com/mm-camelcase</a>
+href="https://github.com/mm-camelcase">github.com/mm-camelcase</a><br />
 <strong>Linkedin:</strong> <a
 href="https://www.linkedin.com/in/mark-mitchell-camelcase/">www.linkedin.com/mmc</a></p>
 </div>
