deploy: mm-camelcase/resume@a5b517c6f1f9a8432f2c240b79b862c45c14fa6c

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -29,12 +29,12 @@
 <div data-custom-style="ContactRight">
 <p><strong>Email:</strong> <a
 href="mailto:mark@camelcase.email">mark@camelcase.email</a><br />
+<strong>Linkedin:</strong> <a
+href="https://www.linkedin.com/in/mark-mitchell-camelcase/">www.linkedin.com/mmc</a><br />
 <strong>Portfolio:</strong> <a
 href="https://www.camelcase.club/">www.camelcase.club</a><br />
 <strong>Github:</strong> <a
-href="https://github.com/mm-camelcase">github.com/mm-camelcase</a><br />
-<strong>Linkedin:</strong> <a
-href="https://www.linkedin.com/in/mark-mitchell-camelcase/">www.linkedin.com/mmc</a></p>
+href="https://github.com/mm-camelcase">github.com/mm-camelcase</a></p>
 </div>
 <h2 id="summary">Summary</h2>
 <p>I have over 20 years of Java programming and application development
