deploy: mm-camelcase/resume@15d573eb13da47982ba5763bd610e80f3d6b6464

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -59,13 +59,13 @@ technical toolkit to enhance and optimize the systems I build.</p>
 </ul>
 <p><strong>Cloud &amp; DevOps</strong></p>
 <ul>
-<li>AWS (ECS, S3, SQS, Lambda, AppConfig, Cognito, todo - update
-me)</li>
+<li>AWS (ECS, EKS, S3, SQS, Lambda, AppConfig, CloudWatch,
+VPC/Networking, IAM, EC2, ECR, SSM, Security Groups)</li>
 <li>Containerization (Docker, Kubernetes, Minikube, Helm)</li>
 <li>Infrastructure as Code (Terraform, Terragrunt)</li>
 <li>CI/CD (Jenkins, GitHub Actions, GitLab CI)</li>
 </ul>
-<p><strong>Architecture &amp; Methodologies (todo- update)</strong></p>
+<p><strong>Architecture &amp; Methodologies</strong></p>
 <ul>
 <li>Microservices Design Patterns</li>
 <li>Event-Driven Architecture</li>
