deploy: mm-camelcase/resume@fd976f2610c1bfaecb61bdeb84090182f3899566

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -38,17 +38,17 @@ href="https://github.com/mm-camelcase">github.com/mm-camelcase</a></p>
 </div>
 <h2 id="summary">Summary</h2>
 <p>I have over 20 years of Java programming and application development
-experience across various industries including fintech,
+experience across various industries, including fintech,
 telecommunications, and hospitality. I possess practical, hands-on
-expertise in executing and architecting the modernization of legacy
+expertise in executing and architecting the modernisation of legacy
 systems, including migration to cloud-native architectures such as
 microservices. I have strong DevOps skills ranging from cloud
 infrastructure deployment automation to CI/CD pipeline configuration,
 with particular focus on AWS environments. During the initial 10 years
-of my career, I specialized as a full-stack developer, implementing
+of my career, I specialised as a full-stack developer, implementing
 robust middleware and creating feature-rich UIs. Currently, I’m
 expanding my expertise by integrating AI and machine learning into my
-technical toolkit to enhance and optimize the systems I build.</p>
+technical toolkit to enhance and optimise the systems I build.</p>
 <h2 id="technical-expertise">Technical Expertise</h2>
 <p><strong>Core Technologies</strong></p>
 <ul>
@@ -103,7 +103,7 @@ services</li>
 <p><strong>Key Achievements:</strong></p>
 <ul>
 <li>Diagnosed and resolved critical system stability issues by
-optimizing JVM memory settings, eliminating production crashes</li>
+optimising JVM memory settings, eliminating production crashes</li>
 <li>Implemented comprehensive observability solution using Datadog with
 custom alarms and dashboards, reducing incident response time by
 80%</li>
@@ -135,20 +135,20 @@ best practices for modern cloud-native development</li>
 </tbody>
 </table>
 <p><em>Workhuman (Integrations Team)</em><br />
-<em>Workhuman provide recognition software to companies enabling
+<em>Workhuman provide recognition software to companies, enabling
 employees to recognise and reward each other.</em></p>
 <p><strong>Role:</strong></p>
 <ul>
-<li>Development and maintenance of customer facing APIs and associated
+<li>Development and maintenance of customer-facing APIs and associated
 security concerns</li>
 <li>Identify process/pipeline/cycle inefficiencies across team &amp;
 squads</li>
 <li>Provide technical training and advice to squads as part of the
-integration’s teams modernisation drive</li>
+integration team’s modernisation drive</li>
 </ul>
 <p><strong>Key Projects:</strong></p>
 <ul>
-<li>Security modernisation for public facing APIs</li>
+<li>Security modernisation for public-facing APIs</li>
 <li>Kubernetes sandbox development environment using Minikube, Helm and
 Skaffold</li>
 <li>Technical training in the form of POCs, detailed documentation,
